# OpenGL-Android

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cube_fragment_shader.glsl  cube_vertex_shader.glsl  fragment_shader.glsl  lamp_fragment_shader.glsl  lamp_vertex_shader.glsl  model_fragment_shader.glsl  model_vertex_shader.glsl  vertex_shader.glsl
app/src/main/cpp/: glcore.cpp
app/src/main/cpp/application/: ArApplication.cpp  ArApplication.h  GraphicalApplication.cpp  GraphicalApplication.h  NativeApplication.cpp  NativeApplication.h  SceneApplication.cpp  SceneApplication.h
app/src/main/cpp/application/lifecycle/: LifecycleListener.h
app/src/main/cpp/application/renderer/: ArBackgroundRenderer.cpp  ArBackgroundRenderer.h  ArObjectRenderer.cpp  ArObjectRenderer.h  BackgroundRenderer.cpp  BackgroundRenderer.h  ObjectRenderer.cpp  ObjectRenderer.h  PlaneRenderer.cpp  PlaneRenderer.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h
app/src/main/cpp/application/renderer/base/: BaseRenderer.cpp  BaseRenderer.h
app/src/main/cpp/application/renderer/camera/: Camera.cpp  Camera.h
app/src/main/cpp/application/renderer/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
app/src/main/cpp/application/renderer/shader/: Shader.h  ShaderProgram.h
app/src/main/cpp/boost/: di.hpp
app/src/main/cpp/utils/: AndroidIOSystem.cpp  AndroidIOSystem.h  Random.cpp  Random.h  RenderUtils.cpp  RenderUtils.h  ResourceManager.cpp  ResourceManager.h  ShaderUtils.cpp  ShaderUtils.h
app/src/main/java/com/example/sinigr/openglcourse/: MainActivity.kt
app/src/main/java/com/example/sinigr/openglcourse/application/: NativeInterface.kt
app/src/main/java/com/example/sinigr/openglcourse/glcore/: NativeService.kt
app/src/main/java/com/example/sinigr/openglcourse/glcore/renderer/: GlRenderer.kt  LifecycleListener.kt  NativeRenderer.kt
app/src/main/java/com/example/sinigr/openglcourse/glcore/view/: GLView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
distribution/assimp/include/: AndroidJNIIOSystem.h
distribution/assimp/include/assimp/: DefaultIOStream.h
gradle/wrapper/: gradle-wrapper.properties
